Acil durum kişileri API'si eklendi, kullanıcı ayarları veritabanına bağlandı ve harita mesafe sorguları PostGIS ile optimize edildi.